# AetherLink

./: .dockerignore  .gitignore  Cargo.toml  Deployment-Scenarios.md  Dockerfile  Dockerfile.client  Dockerfile.server  In-depth-explanation.md  Makefile  QUICK_START.md  README.md  SETUP_GUIDE.md  aetherlink-server.sh  aetherlink.py  aetherlink.service  aetherlink_config.json  build.sh  create_tunnel_example.sh  docker-compose.yml  entrypoint.sh  go.mod  install.sh  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflow/: ci.yml
.github/workflows/: ci-cd.yml  main.yml
cmd/lt-client/: main.go
cmd/lt-server/: main.go
config/: aetherlink_config.json
config/nginx/: nginx-http.conf.template
config/scripts/: health-check.sh
docker/: nginx.conf
docker/nginx/: nginx-https.conf.template
docker/scripts/: entrypoint.sh
internal/auth/: auth.go
internal/client/: client.go
internal/server/: manager.go  server.go
src/: client.rs  config.rs  main.rs  server.rs  tunnel.rs
tests/: test_aetherlink.py
