[package]
name = "aetherlink"
version = "3.0.0"
edition = "2021"
description = "Lightweight HTTP tunnel using Iroh P2P transport"
license = "Apache-2.0"
repository = "https://github.com/hhftechnology/AetherLink"
readme = "README.md"
keywords = ["iroh", "tunnel", "http", "proxy", "p2p"]
categories = ["network-programming", "command-line-utilities", "web-programming"]

[[bin]]
name = "aetherlink"
path = "src/main.rs"

[dependencies]
# Core dependencies - using same version as pirohxy
iroh = { version = "0.91.1", features = ["full"] }
iroh-base = "0.91.1" 
iroh-net = "0.91.1"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP handling
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
bytes = "1.8"

# Utilities
directories = "5.0"
ed25519-dalek = { version = "2.1", features = ["pem", "pkcs8"] }
futures-util = "0.3"
url = "2.5"
base64 = "0.22"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true